--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,31 +7,27 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build_test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-  publish-job:
-    runs-on: ubuntu-latest
-    needs: build_test
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+          cache: 'maven'
+      
+      - name: Build and Test
+        run: mvn -B verify
+      
+      - name: Package Artifact
+        run: mkdir -p staging && cp target/*.jar staging
+      
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
         with:
-          java-version: '17'
-          distribution: 'temurin'
-      - run: mvn --batch-mode --update-snapshots verify
-      - run: mkdir staging && cp target/*.jar staging
-      - uses: actions/upload-artifact@v3
-        with:
-          name: Package
-          path: staging
+          name: maven-package
+          path: staging/
+          retention-days: 7
