--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,6 +3,8 @@ name: Java Maven Build & Publish Artifact
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -29,3 +31,15 @@ jobs:
           name: maven-package
           path: staging/
           retention-days: 7
+      
+      - name: Log in to Azure Container Registry
+        run: |
+          echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.REGISTRY_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
+      
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest .
+
+      - name: Push Docker Image
+        run: |
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest
