--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java Maven Build & Publish Artifact
+name: Java Maven Build & Push Docker Image to ACR
 
 on:
   push:
@@ -7,10 +7,11 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
       
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -19,19 +20,14 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
       
-      - name: Build and Test
+      - name: Build and Test using Maven
         run: mvn -B verify
       
       - name: Package Artifact
-        run: mkdir -p staging && cp target/*.jar staging
-      
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: maven-package
-          path: staging/
-          retention-days: 7
-      
+        run: |
+          mkdir -p staging
+          cp target/*.jar staging/
+
       - name: Log in to Azure Container Registry
         run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.REGISTRY_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
@@ -40,6 +36,6 @@ jobs:
         run: |
           docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest .
 
-      - name: Push Docker Image
+      - name: Push Docker Image to ACR
         run: |
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest
