--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,17 +12,17 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: 'maven'
-      
+
       - name: Build and Test using Maven
-        run: mvn -B verify
-      
+        run: mvn -B clean verify
+
       - name: Package Artifact
         run: |
           mkdir -p staging
@@ -31,11 +31,13 @@ jobs:
       - name: Log in to Azure Container Registry
         run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.REGISTRY_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
-      
+
       - name: Build Docker Image
         run: |
+          # Build Docker image
           docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest .
 
       - name: Push Docker Image to ACR
         run: |
+          # Push Docker image to Azure Container Registry
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest
