--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java Maven Build & Push Docker Image to ACR
+name: Java CI with Maven
 
 on:
   push:
@@ -7,35 +7,30 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: 'maven'
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-      - name: Build and Test using Maven
-        run: mvn clean verify
+    - name: Build with Maven
+      run: mvn clean package
 
-      - name: Package Artifact
-        run: |
-          mkdir -p staging
-          cp target/*.jar staging/
+    - name: Build Docker image
+      run: |
+        docker build -t backbase.azurecr.io/my-java-app:latest .
+      
+    - name: Login to Azure Container Registry
+      run: |
+        echo "${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}" | docker login backbase.azurecr.io --username ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }} --password-stdin
 
-      - name: Log in to Azure Container Registry
-        run: |
-          echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.REGISTRY_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
-
-      - name: Build Docker Image
-        run: |
-          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest .
-
-      - name: Push Docker Image to ACR
-        run: |
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest
+    - name: Push Docker image
+      run: |
+        docker push backbase.azurecr.io/my-java-app:latest
