--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
       
     - name: Login to Azure Container Registry
       run: |
-        echo "${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}" | docker login backbase.azurecr.io --username ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }} --password-stdin
+        echo "${{ secrets.ACR_PASSWORD }}" | docker login backbase.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password-stdin
 
     - name: Push Docker image
       run: |
