--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,13 +1,11 @@
-name: Java CI with Maven
+name: Java Maven Build and Push Docker Image
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,14 +21,18 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
 
-    - name: Build Docker image
-      run: |
-        docker build -t backbase.azurecr.io/my-java-app:latest .
-      
-    - name: Login to Azure Container Registry
-      run: |
-        echo "${{ secrets.ACR_PASSWORD }}" | docker login backbase.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password-stdin
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
-    - name: Push Docker image
-      run: |
-        docker push backbase.azurecr.io/my-java-app:latest
+    - name: Docker login to ACR
+      run: az acr login --name ${{ secrets.ACR_NAME }}
+
+    - name: Build Docker Image
+      run: docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest .
+
+    - name: Push Docker Image
+      run: docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest
