--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-        auth-type: service-principal
+        auth-type: SERVICE_PRINCIPAL
 
     - name: Docker login to ACR
       run: az acr login --name ${{ secrets.ACR_NAME }}
