--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,20 +21,14 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
 
-    - name: Azure Login
-      uses: azure/login@v1
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-        auth-type: SERVICE_PRINCIPAL
-
-    - name: Docker login to ACR
-      run: az acr login --name ${{ secrets.ACR_NAME }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-java-app:latest .
 
     - name: Push Docker Image
-      run: docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/my-java-app:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-java-app:latest
