--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,9 +36,12 @@ jobs:
           -Dsonar.organization=ramsnow42key
           -Dsonar.host.url=https://sonarcloud.io
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          -Dsonar.java.binaries=target/classes
+          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
